--- a/.github/workflows/ci-cd.yml
+++ b/.github/workflows/ci-cd.yml
@@ -16,10 +16,10 @@ jobs:
       uses: actions/checkout@v3
 
     # Set up Python
-    - name: Set up Python 3.9
+    - name: Set up Python 3.12
       uses: actions/setup-python@v4
       with:
-        python-version: '3.9'
+        python-version: '3.12'
 
     # Install dependencies
     - name: Install dependencies
@@ -28,10 +28,10 @@ jobs:
         pip install -r requirements.txt
 
     # Lint with flake8
-    - name: Lint with flake8
-      run: |
-        pip install flake8
-        flake8 . --max-line-length=120 --exclude=.git,__pycache__,*.pyc
+    #- name: Lint with flake8
+    #  run: |
+    #    pip install flake8
+    #    flake8 . --max-line-length=120 --exclude=.git,__pycache__,*.pyc
 
     # Run tests with pytest
     - name: Run tests
