--- a/.github/workflows/ci-cd.yml
+++ b/.github/workflows/ci-cd.yml
@@ -27,17 +27,14 @@ jobs:
         python -m pip install --upgrade pip
         pip install -r requirements.txt
 
-    # Lint with flake8
-    #- name: Lint with flake8
-    #  run: |
-    #    pip install flake8
-    #    flake8 . --max-line-length=120 --exclude=.git,__pycache__,*.pyc
-
     # Run tests with pytest
     - name: Run tests
       run: |
         pip install pytest
+        export PYTHONPATH=$PYTHONPATH:$GITHUB_WORKSPACE  # Add project root to PYTHONPATH
         pytest tests/ -v
+      env:
+        GITHUB_WORKSPACE: ${{ github.workspace }}  # Define repo root path
 
     # Run the training script (limited epochs for CI)
     - name: Run training script
@@ -55,3 +52,5 @@ jobs:
           logs/
           plots/
           models/
+      continue-on-error: true  # Optional: Prevents failure if upload step has issues
+      if-no-files-found: warn  # Optional: Warns instead of failing if no files found
